fix scrolling behavior for sidebar fundraiser and btn spacing

--- a/app/javascript/components/DonationBands/DonationBands.css
+++ b/app/javascript/components/DonationBands/DonationBands.css
@@ -7,7 +7,7 @@
   margin-bottom: 12px;
 }
 
-.AmountSelection__currency-selector {
+.AmountSelection__proceed-button, .AmountSelection__currency-selector {
   margin-top: 12px;
 }
 .DonationBands-input {
